feat : 클립보드에 복사 기능 추가

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,9 +6,12 @@
     <h1>Hello Extensions</h1>
     <div class="InputWrapper">
       <input id="inputText" type="text" placeholder="한글 수식을 입력하세요" />
-      <button id="convertBtn" onClick="submit">변환</button>
+      <button id="convertBtn">변환</button>
     </div>
     <div id="resultText"></div>
+    <button id="copyBtn">
+      <img src="image.png" alt="복사" style="width: 20px; height: 20px" />
+    </button>
     <script src="./popup.js"></script>
   </body>
 </html>
